# 336Tutorial

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
Tutorial1/: CMakeLists.txt  Tutorial1.cpp
Tutorial2/: CMakeLists.txt
Tutorial2/Tutorial2a/: CMakeLists.txt  Tutorial2a.cpp
Tutorial2/Tutorial2b/: CMakeLists.txt  SimpleFS.frag  SimpleVS.vert  Tutorial2b.cpp  shader.cpp  shader.h
Tutorial2/Tutorial2c/: CMakeLists.txt  SpColorVS.vert  Tutorial2c.cpp  shader.cpp
Tutorial2/Tutorial2d/: CMakeLists.txt  ColorVS.vert  Tutorial2d.cpp  shader.cpp  shader.h
Tutorial2/Visual Studio Projects/Tutorial2a/Tutorial/: Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial2a.cpp
Tutorial2/Visual Studio Projects/Tutorial2b/Tutorial/: SimpleFS.frag  SimpleVS.vert  Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial2b.cpp
Tutorial2/Visual Studio Projects/Tutorial2c/Tutorial/: SpColorVS.vert  Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial2c.cpp  shader.cpp
Tutorial2/Visual Studio Projects/Tutorial2d/Tutorial/: ColorVS.vert  Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial2d.cpp
Tutorial2/XcodeProjects/Tutorial2b/Tutorial/: Tutorial2b.cpp  shader.cpp
Tutorial3/: CMakeLists.txt
Tutorial3/Tutorial3a/: CMakeLists.txt  ModelSpaceVS.vert  Tutorial3a.cpp  shader.cpp
Tutorial3/Tutorial3b/: CMakeLists.txt  Tutorial3b.cpp
Tutorial3/Tutorial3c/: CMakeLists.txt  ModelSpaceVS.vert  Tutorial3c.cpp  shader.cpp
Tutorial3/Tutorial3d/: CMakeLists.txt  Tutorial3d.cpp
Tutorial3/Visual Studio Projects/Tutorial3a/Tutorial/: Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial3a.cpp
Tutorial3/Visual Studio Projects/Tutorial3b/Tutorial/: Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial3b.cpp
Tutorial3/Visual Studio Projects/Tutorial3c/Tutorial/: ModelSpaceVS.vert  Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial3c.cpp
Tutorial3/Visual Studio Projects/Tutorial3d/Tutorial/: Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial3d.cpp
Tutorial4/: CMakeLists.txt
Tutorial4/Tutorial4a/: CMakeLists.txt  ModelSpaceVS.vert  Tutorial4a.cpp  shader.cpp
Tutorial4/Tutorial4b/: CMakeLists.txt  Tutorial4b.cpp
Tutorial4/Tutorial4c/: CMakeLists.txt  MVP_VS.vert  Tutorial4c.cpp  shader.cpp  shader.h
Tutorial4/Tutorial4c/models/: CMakeLists.txt
Tutorial4/Visual Studio Projects/Tutorial4a/Tutorial/: Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial4a.cpp
Tutorial4/Visual Studio Projects/Tutorial4b/Tutorial/: Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial4b.cpp
Tutorial4/Visual Studio Projects/Tutorial4c/Tutorial/: Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial4c.cpp
Tutorial5/: CMakeLists.txt
Tutorial5/Tutorial5a/: CMakeLists.txt  Tutorial5a.cpp  shader.h
Tutorial5/Tutorial5b/: CMakeLists.txt  Tutorial5b.cpp  shader.cpp
Tutorial5/Tutorial5b/models/: CMakeLists.txt
Tutorial5/Tutorial5c/: CMakeLists.txt  PerFragLightingFS.frag  PerFragLightingVS.vert  Tutorial5c.cpp  shader.cpp
Tutorial5/Tutorial5d/: CMakeLists.txt  Tutorial5d.cpp  shader.cpp
Tutorial5/Visual Studio Projects/Tutorial5a/: Tutorial.sln
Tutorial5/Visual Studio Projects/Tutorial5a/Tutorial/: ColorFS.frag  PerVertexLightingVS.vert  Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial5a.cpp
Tutorial5/Visual Studio Projects/Tutorial5b/Tutorial/: Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial5b.cpp
Tutorial5/Visual Studio Projects/Tutorial5c/Tutorial/: Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial5c.cpp
Tutorial5/Visual Studio Projects/Tutorial5d/Tutorial/: MultiLightsFS.frag  MultiLightsVS.vert  Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial5d.cpp
Tutorial6/: CMakeLists.txt
Tutorial6/Tutorial6a/: CMakeLists.txt  Tutorial6a.cpp  bmpfuncs.cpp  shader.cpp
Tutorial6/Tutorial6b/: CMakeLists.txt  MultiTexFS.frag  Tutorial6b.cpp  bmpfuncs.cpp  bmpfuncs.h
Tutorial6/Tutorial6b/images/: CMakeLists.txt
Tutorial6/Tutorial6c/: CMakeLists.txt  Camera.cpp  Camera.h  Tutorial6c.cpp
Tutorial6/Tutorial6c/images/: CMakeLists.txt
Tutorial6/Visual Studio Projects/Tutorial6a/Tutorial/: LightAndTextureFS.frag  Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial6a.cpp
Tutorial6/Visual Studio Projects/Tutorial6b/Tutorial/: MultiTexVS.vert  Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial6b.cpp
Tutorial6/Visual Studio Projects/Tutorial6c/Tutorial/: NormalMapFS.frag  Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial6c.cpp
Tutorial7/: CMakeLists.txt
Tutorial7/Tutorial7a/: CMakeLists.txt  Tutorial7a.cpp
Tutorial7/Tutorial7a/images/: CMakeLists.txt
Tutorial7/Tutorial7a/models/: CMakeLists.txt
Tutorial7/Tutorial7b/: AlphaBlendingFS.frag  CMakeLists.txt  Tutorial7b.cpp
Tutorial7/Tutorial7c/: CMakeLists.txt  ToonShadingFS.frag  Tutorial7c.cpp
Tutorial7/Tutorial7d/: CMakeLists.txt  GoochShadingFS.frag  Tutorial7d.cpp
Tutorial7/Visual Studio Projects/Tutorial7a/Tutorial/: Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial7a.cpp
Tutorial7/Visual Studio Projects/Tutorial7b/Tutorial/: AlphaBlendingVS.vert  Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial7b.cpp
Tutorial7/Visual Studio Projects/Tutorial7c/Tutorial/: Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial7c.cpp
Tutorial7/Visual Studio Projects/Tutorial7d/Tutorial/: Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial7d.cpp
Tutorial8/: CMakeLists.txt
Tutorial8/Tutorial8a/: CMakeLists.txt  Tutorial8a.cpp
Tutorial8/Tutorial8a/models/: CMakeLists.txt
Tutorial8/Tutorial8b/: CMakeLists.txt  Tutorial8b.cpp
Tutorial8/Tutorial8c/: CMakeLists.txt  LightAndTextureFS.frag  LightAndTextureVS.vert  Tutorial8c.cpp  bmpfuncs.cpp  bmpfuncs.h  shader.cpp
Tutorial8/Visual Studio Projects/Tutorial8a/Tutorial/: PerFragLightingFS.frag  Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial8a.cpp
Tutorial8/Visual Studio Projects/Tutorial8b/Tutorial/: PerFragLightingVS.vert  Tutorial.vcxproj  Tutorial.vcxproj.filters  Tutorial8b.cpp
Tutorial8/Visual Studio Projects/Tutorial8c/Tutorial/: ScreenQuadFS.frag  ScreenQuadVS.vert  Tutorial.vcxproj  Tutorial8c.cpp  (+1 more)
